# pimple

./: .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  _config.yml
.github/workflows/: build_on_push.yml
Source/: CMakeLists.txt  FilePortal.h  Synth.h  Voice.h  pimple.cpp
Source/AMPLE/: CMakeLists.txt  Chan.h  Dict.h  Ensemble.cpp  Ensemble.h  Lex.h  Machine.h  Player.h  Score.h  Shell.h  Sound.cpp  Sound.h  StrStack.h  TABLE_GEN.py  Table_exp.py  Table_log_sine.py  Table_phase_delta.py  Types.h  Voice.h  Wave.h
Source/AMPLE/Test/: CMakeLists.txt  TestDict.cpp  TestMain.cpp  TestStrStack.cpp
Source/hw/: Audio.h
